--- a/index.html
+++ b/index.html
@@ -42,16 +42,7 @@
         <h2 class="sobre-titulo">Sobre min</h2>
         <div class="sobre-caixa">
             <p class="sobre-parrafo">
-                Meu nome é Bernardo Gutierrez, sou de Santiago do Chile e moro no Brasil a mais de 10 anos. Atualmente
-                me encontro em uma fase empolgante da minha vida, estou em transição de carreira do setor educacional
-                para o desenvolvimento Fron-End. Após mais de 20 anos de experiencia como professor, gestor educacional
-                e líder de projetos, decidi me reinventar e investir no desenvolvimento front-end. Ao ser uma pessoa
-                detalhista sempre me senti ligado aos códigos da programação além de ser um amante da tecnologia e seu
-                impacto no mundo. Com o tempo estudando programação descobri que faz parte da minha personalidade,
-                explorar novos desafios e construir soluções criativas. Atualmente estou me especializando em Front-End
-                e fazendo um curso desenvolvedor Full Stack. Focado em seguir aperfeiçoando habilidades essenciais como
-                Html, Css e JavaScript. Me descrevo como um desenvolvedor apaixonado por criar interfaces bonitas e funcionais.
-                Estou em busca de oportunidades na área.
+                “Meu nome é Bernardo Gutierrez, sou de Santiago do Chile e moro no Brasil há mais de 10 anos. Estou em transição de carreira do setor educacional para o desenvolvimento Front-End. Depois de mais de 20 anos como professor e gestor educacional, decidi investir na tecnologia. Sou detalhista, apaixonado por design, tecnologia e por criar soluções criativas. Estou estudando Desenvolvimento Full Stack e busco oportunidades na área.”
             </p>
         </div>
     </section> <!--sobre mim-->
